created habit added features deleting,favorite,tasks_done,undone,notdefine status to habit

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,22 +1,69 @@
+<link rel="stylesheet" href="/css/home.css">
+
 <h3>home page</h3>
 <form action="/habit/create" method="post">
     <input type="text" name="content" placeholder="write habit here">
     <input type="submit" value="create">
 </form>
 
-<div>
+<section>
+    <div id="status-details-main">
+        <div class="status-details-child">
+            <small>Completed status:</small>
+            <small><i class="fa-solid fa-square-check" ></i></small>
+        </div>
+        <div class="status-details-child">
+            <small>Not-Completed Status:</small>
+            <small><i class="fa-sharp fa-solid fa-xmark fa-lg"></i></small>
+        </div>
+        <div class="status-details-child">
+            <small>Waiting Status:</small>
+            <small><i class="fa-sharp fa-solid fa-hourglass"></i></small>
+        </div>
+    </div>
     <ul>
+        
+        <% for(habit of habits){ %>
 
-       <% for(i=0; i< habits.length; i++ ){ %>
-            <li>
+            <li> 
                 <p>
-                    <%=habits[i].content %>
-                </p>
-                <p>
-                    <a href="/habit/destroy/<%= habits[i].id %>">remove</a>
-                </p>
+                    <div id="status-div">
+
+                        <a href="/habit/status/?day=<%= date.getDay()%>&habitId=<%=habit.id %>&date=<%= date.getDate() %>">
+                            <% if(habit.currentStatus[date.getDay()].state == "empty" || habit.currentStatus[date.getDay()].state == "undefine" ){ %>
+                                
+                                <i class="fa-sharp fa-solid fa-hourglass"></i>
+                                <% }else if(habit.currentStatus[date.getDay()].state == "true"){ %>
+                                    <i class="fa-solid fa-square-check" ></i>
+                                    <% }else{ %>
+                                        <i class="fa-sharp fa-solid fa-xmark fa-lg"></i>
+
+                                        <% } %>
+                                        <%# habit.currentStatus[date.getDay()].state %>
+                                    </a>
+                    </div>
+                
+                <div id="content-div"> 
+                    <small> <%= habit.content %>  </small> 
+                    <small> <%= habit.currentStatus[date.getDay()].date %> </small> 
+                </div>
+                
+                <div id="fav_delete-div">
+
+                    <small><a href="/habit/favourite/<%= habit._id %>">
+                        <% if(habit.favourite == true){ %>
+                            
+                            <i class="fa-solid fa-bookmark"></i>
+                            <% }else{ %>
+                                <i class="fa-regular fa-bookmark"></i>
+                                <% } %>
+                            </a></small>
+                            <small><a href="/habit/destroy/<%=habit.id %> ">
+                                <i class="fa-sharp fa-solid fa-trash-can"></i>
+                            </a></small>
+                </div>
+            </p>
             </li>
-
         <% } %>
     </ul>
-</div>
+</section>
