--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -51,9 +51,9 @@ body{
     }
 
     footer{
-        position: sticky;
-        bottom:  0px;
-        padding: 0;
+        // position: sticky;
+        // bottom:  0px;
+        // padding: 0;
         background-color: aqua;
         height: auto;
         ul{
