--- a/assets/scss/layout.scss
+++ b/assets/scss/layout.scss
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     padding: 0;
+    background-color: antiquewhite !important;
+
     
     header{
         position: sticky;
@@ -18,55 +20,23 @@ body{
             }
         }
     }
-    main{
-        padding: 30px;
-        min-height: 80vh;
-        background-color: antiquewhite;
-        text-align: center;
 
-        form{
-            margin: auto;
-            width: 60%;
-            border: 1px solid black;
-            border-radius: 10px;
-            display: flex;
-            flex-direction: column;
-            
-            div{
-                
-                display: flex;
-                align-items: center;
-                justify-content: center;
-                padding: 5px;
-                input{
-                    width: 70%;
-                }
-                label{
-                    width: 30%;
-                    
-                }
-            }
+    .sign-in-out{
+        font-weight: 500;
 
+        a{
+            color: black;
+            border: 0.5px solid black;
+            padding: 3px;
+            border-radius: 1rem;
+            background-color: rgb(170, 222, 135);
         }
     }
-
-    footer{
-        // position: sticky;
-        // bottom:  0px;
-        // padding: 0;
-        background-color: aqua;
-        height: auto;
-        ul{
-            display: flex;
-            margin: auto;
-            padding-bottom: 5px;
-            list-style: none;
-            // padding: 20px;
-            li{
-                margin: 5px;
-            }
-
-        }
+    main{
+        padding: 30px;
+        min-height: 100vh;
+        background-color: antiquewhite;
+        text-align: center;
     }
 
 }
