--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -5,6 +5,29 @@ body {
         text-decoration: none;
     }
 
+    #weekliTrack{
+        background-color: blueviolet;
+        width: 200px;
+        text-align: center;
+        margin: 10px auto;
+        border-radius: 0.5rem;
+        padding: 10px;
+        
+        a{
+            color: aliceblue;
+            font-family: sans-serif;
+            font-weight: 800;
+            font-size: larger;
+        }
+    }
+    #create-habit{
+        padding: 10px;
+        input{
+            height: auto;
+            border-radius: 10px;
+            padding: 5px;
+        }
+    }
     form{
         margin-bottom: 10px !important;
     }
