--- a/views/_footer.ejs
+++ b/views/_footer.ejs
@@ -1,4 +1,4 @@
-<footer>
+<!-- <footer>
     <ul>
     <% if(locals.user){ %>
             <li><%= locals.user.name %></li>
@@ -9,4 +9,4 @@
                 <li><a href="/users/sign-in">Sign-in</a></li>
            <% } %>
         </ul>
-</footer>
+</footer> -->
