--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,16 +1,44 @@
 
-    <h3>Sign-in</h3>
+    <!-- <h3>Sign-in</h3>
 <form action="/users/createSession" method="post">
     <div>
         <label for="email">email</label>
-        <input id="email" type="email" name="email" placeholder="enter emal">
+        <input id="email" type="email"  placeholder="enter emal">
     </div>
     <div>
         <label for="password">password</label>
-        <input id="password" type="password" name="password" placeholder="enter password">
+        <input id="password" type="password"  placeholder="enter password">
     </div>
     <div>
 
         <input type="submit" value="Sign-in">
     </div>
-</form>
+</form> -->
+<link rel="stylesheet" href="/css/sign_in.css">
+    <main>
+        <div class="row">
+            <div class="colm-logo">
+                <img src="/img/logo.jpg" alt="Logo">
+                <h2>Habit Tracker helps you Track  your daily routine and Track them.</h2>
+            </div>
+            <div class="colm-form">
+                <div class="form-container">
+                    <form action="/users/createSession" method="post">
+
+                        <input type="email" name="email" placeholder="Email address">
+                        <input type="password" name="password" placeholder="Password">
+                        <button class="btn-login">Login</button>
+                    </form>
+                    <a href="/users/password_reset">Forgotten password?</a>
+                    <a href="/users/sign-up">
+                        <button class="btn-new">Create new Account</button>
+                    </a>
+                </div>
+                <p><b>Create a Page</b> for a celebrity, brand or business.</p>
+            </div>
+        </div>
+    </main>
+
+
+
+
