--- a/views/password_reset.ejs
+++ b/views/password_reset.ejs
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/css/sign_in.css">
+<link rel="stylesheet" href="/css/sign_in_out.css">
     <main>
         <div class="row">
             <div class="colm-logo">
@@ -12,9 +12,11 @@
                         <input type="text" name="name" placeholder="name">
                         <input type="email" name="email" placeholder="Email address">
                         <input type="password" name="password" placeholder="New Password">
-                        <button class="btn-login">Submit</button>
+                        <button class="btn-login">Reset Password</button>
                     </form>
-                    <!-- <a href="/users/sign-in">Login</a> -->
+                    <a href="/users/sign-in">
+                        <button class="btn-new">Login</button>
+                    </a>
                     <a href="/users/sign-up">
                         <button class="btn-new">Create new Account</button>
                     </a>
