--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -4,8 +4,8 @@ body {
   background-color: antiquewhite !important;
 }
 body header {
-  position: sticky;
-  top: 0px;
+  position: fixed;
+  width: 100vw;
   padding: 0;
   background-color: aqua;
   height: auto;
