--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,21 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <!-- noty link for animation -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.css" />
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noty/3.1.4/noty.min.js"></script>
+
+    <!-- j Query cdn below noty link -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script> -->
+
+
     <script src="https://kit.fontawesome.com/66a49a29d4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="/css/layout.css">
+    <%- style %>
 </head>
+
 <body>
     <%- include('_header'); %>
-   
-    <main>
-       <%- body %>
-   </main>
 
+        <main>
+            <%- body %>
+        </main>
+        <%= flash.success %>
+        <%= flash.error %>
+        <script>
+            
 
-    <%# include('_footer'); %>
+        <% if (flash.success && flash.success.length > 0) {  %>
+                    new Noty({
+
+                        theme: 'relax',
+                        type: 'success',
+                        text: "<%= flash.success %>",
+                        layout: 'topRight',
+                        timeout: 1500
+
+                    }).show();
+            <% } %>
+
+            <% if (flash.error && flash.error.length > 0) { %>
+                    new Noty({
+                        theme: 'relax',
+                        type: 'error',
+                        text: "<%= flash.error %>",
+                        layout: 'topRight',
+                        timeout: 1500
+                    }).show();
+            <% } %>
+            </script>
+
+        <!-- using partials to footer -->
+        <!-- <%# include('_footer'); %> -->
+
+        <%- script %>
 </body>
+
 </html>
