--- a/views/sign-up.ejs
+++ b/views/sign-up.ejs
@@ -1,26 +1,5 @@
-<!-- <form action="/users/create" method="post">
-    <div>
-        <label for="username">username</label>
-        <input id="username" type="text" name="name" placeholder="enter name">
-    </div>
-    <div>
-        <label for="useremail">email</label>
-        <input id="useremail" type="email" name="email" placeholder="enter email">
-    </div>
-    <div>
-        <label for="userpassword">password</label>
-        <input id="userpassword" type="password" name="password" placeholder="enter password">
-    </div>
-    <div>
-        <label for="userconfirm_password">confirm_password</label>
-        <input id="userconfirm_password" type="password" name="confirm_password" placeholder="enter confirm_password">
-    </div>
-    <div>
 
-        <input type="submit" value="sign-up">
-    </div>
-</form> -->
-<link rel="stylesheet" href="/css/sign_in.css">
+<link rel="stylesheet" href="/css/sign_in_out.css">
 <main>
     <div class="row">
         <div class="colm-logo">
