--- a/views/sign_in.ejs
+++ b/views/sign_in.ejs
@@ -1,20 +1,5 @@
 
-    <!-- <h3>Sign-in</h3>
-<form action="/users/createSession" method="post">
-    <div>
-        <label for="email">email</label>
-        <input id="email" type="email"  placeholder="enter emal">
-    </div>
-    <div>
-        <label for="password">password</label>
-        <input id="password" type="password"  placeholder="enter password">
-    </div>
-    <div>
-
-        <input type="submit" value="Sign-in">
-    </div>
-</form> -->
-<link rel="stylesheet" href="/css/sign_in.css">
+<link rel="stylesheet" href="/css/sign_in_out.css">
     <main>
         <div class="row">
             <div class="colm-logo">
@@ -34,7 +19,6 @@
                         <button class="btn-new">Create new Account</button>
                     </a>
                 </div>
-                <p><b>Create a Page</b> for a celebrity, brand or business.</p>
             </div>
         </div>
     </main>
