minor change from frot end part

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -2,6 +2,12 @@
 
 <h3>Daily Habits</h3>
 <div id="weekliTrack"><a href="/habit">Weekly Tracker</a></div>
+<div  style="background-color: azure; width: 200px; margin: auto; border-radius: 1rem; box-shadow: 1px 1px 1px red;" >
+    <a href="/favourite/Dashboard" style="color: rgb(144, 192, 176);" >
+        <h1> Favourites </h1>
+    </a>
+</div>
+            
 
 <form id="create-habit" action="/habit/create" method="post">
     <input type="text" name="content" placeholder="write habit here">
